--- a/index.html
+++ b/index.html
@@ -23,5 +23,29 @@
         <a href="#" class="btn"><button>Contacto</button></a>
     </header>
     
+    <div class="imagenes">
+        <div class="cms1">
+            <img src="https://www.dante.com.co/cdn/shop/files/1_9e107596-2c84-499c-a4ec-978d12250062.jpg?v=1707432378&width=3000"
+                alt="fto1">
+            <img src="https://hmcolombia.vtexassets.com/arquivos/ids/3209716-483-725?v=638335622628870000&width=483&height=725&aspect=true"
+                alt="fto2">
+            <img src="https://hmcolombia.vtexassets.com/arquivos/ids/3445144-483-725?v=638425446798700000&width=483&height=725&aspect=true"
+                alt="fto3">
+            <img src="https://hmcolombia.vtexassets.com/arquivos/ids/3445950-483-725?v=638425451862600000&width=483&height=725&aspect=true"
+                alt="fto4">
+        </div>
+
+        <div class="cms2">
+            <img src="https://hmcolombia.vtexassets.com/arquivos/ids/3431240-483-725?v=638420694246430000&width=483&height=725&aspect=true"
+                alt="fto5">
+            <img src="https://hmcolombia.vtexassets.com/arquivos/ids/3409319-483-725?v=638420548830630000&width=483&height=725&aspect=true"
+                alt="fto6">
+            <img src="https://hmcolombia.vtexassets.com/arquivos/ids/3428279-483-725?v=638420672499930000&width=483&height=725&aspect=true"
+                alt="fto7">
+            <img src="https://hmcolombia.vtexassets.com/arquivos/ids/3426552-483-725?v=638420660283330000&width=483&height=725&aspect=true"
+                alt="fto8">
+        </div>
+    </div>
+    
 </body>
 </html>
